<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <View
        android:id="@+id/homePage_View"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:background="@color/patient_color_bg"/>

    <TextView
        android:id="@+id/glucoseMonitoring_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glucose_monitoring"
        android:fontFamily="@font/titilliumwebbold"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="52dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor"
        android:fontFamily="@font/calibri_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_below="@+id/glucoseMonitoring_TxtView"
        android:layout_marginStart="52dp"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homePage_View"
        android:layout_marginStart="42dp"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="42dp"
        android:columnCount="2"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/connect_to_sensor_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/calibri_regular"
                    android:text="@string/connect_to_sensor"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/connectToSensor_Btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="41dp"
                    android:src="@drawable/view_history_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/calibri_regular"
                    android:text="@string/view_history"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewHistory_Btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/messageicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/calibri_regular"
                    android:text="@string/message_doctor"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/message_Btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="110dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/ic_baseline_logout_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/calibri_regular"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout_Btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground" />

        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>