<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse1"
        android:layout_marginStart="150dp"/>

    <ImageView
        android:id="@+id/patientAppIcon_ImgView"
        android:layout_width="111dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/patientappicon" />

    <TextView
        android:id="@+id/patient_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:fontFamily="@font/titilliumwebbold"
        android:text="@string/patient"
        android:textColor="@color/patientTxt"
        android:layout_below="@+id/patientAppIcon_ImgView"
        android:layout_marginStart="35dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username_EditTxt"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/patient_TxtView"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="32dp"
        android:paddingEnd="20dp"
        android:background="@drawable/custom_login_edittext"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_EditText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/username_EditTxt"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:paddingEnd="20dp"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:background="@drawable/custom_login_edittext"
        android:hint="@string/password"
        android:singleLine="true"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

  <FrameLayout
      android:id="@+id/button_FrameLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/password_EditText">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/login_Btn"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:layout_marginStart="50dp"
              android:layout_marginTop="20dp"
              android:layout_marginEnd="50dp"
              android:background="@drawable/custom_login_btn"
              android:fontFamily="@font/calibribold"
              android:text="@string/login"
              android:textAllCaps="false"
              android:textColor="@color/white"
              android:textSize="20sp"
              android:layout_marginBottom="20dp"/>

          <ProgressBar
              android:id="@+id/login_ProgressBar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:indeterminateTint="@color/patientTxt"
              android:layout_centerInParent="true"
              android:layout_marginTop="20dp"
              android:visibility="gone"/>

      </RelativeLayout>
  </FrameLayout>

    <TextView
        android:id="@+id/forgotPassword_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgotten Password?"
        android:fontFamily="@font/calibri_regular"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/button_FrameLayout"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/noAccount_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have account yet? Sign up here"
        android:fontFamily="@font/calibri_regular"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        tools:ignore="HardcodedText" />



</RelativeLayout>